# agentic

./: CURRICULUM.md  README.md  pyproject.toml
.serena/: project.yml
stage_01_async/: NOTES.md  README.md  task_01_toy_event_loop.py  task_02_async_http_client.py  task_04_resilience.py  task_05_callbacks_vs_async.py  task_06_rate_limiter.py  task_07_idempotent_ingest.py
stage_01_async/task_03_fastapi_fanout/: app.py
stage_01_async/tests/: test_02_http_client.py  test_03_fastapi.py  test_04_resilience.py  test_06_rate_limiter.py  test_07_idempotent_ingest.py
