[project]
name = "agentic"
version = "0.1.0"
description = "6-month agentic AI engineering curriculum, built by hand"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
# Lets you write `async def test_...` without decorating every test.
asyncio_mode = "auto"
testpaths = ["stage_01_async/tests"]
